<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="10dp"
    app:cardBackgroundColor="#5cb85c"
    app:contentPadding="5dp"
    android:padding="10dp"
    android:layout_margin="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:background="#fff"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/instruction"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="@font/pacifico"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="@font/pacifico"
            android:text="@string/warnings"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/warning_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/ok"
            android:fontFamily="@font/pacifico"
            android:background="#5cb85c"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>