<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="wrap_content">

<androidx.cardview.widget.CardView
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="10dp"
    android:padding="5dp"
    app:cardBackgroundColor="#5cb85c"
    app:contentPadding="5dp"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/tick"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/tick" />
</RelativeLayout>

        <ImageView
            android:id="@+id/image"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/fifth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/time"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/pacifico"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/_1_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>