<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        app:cardCornerRadius="7dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:cardBackgroundColor="#5cb85c"
        app:contentPadding="5dp"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="10dp"
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/day"
                android:background="#F0AD4E"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico"
                android:text="@string/day"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/excercise"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/pacifico"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/click"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:text="@string/click"
                    android:fontFamily="@font/pacifico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>