<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <androidx.cardview.widget.CardView
       app:cardCornerRadius="10dp"
       app:cardElevation="10dp"
       app:cardMaxElevation="10dp"
       android:background="#fff"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <TextView
                   android:id="@+id/dialog_day"
                   android:textAppearance="@style/TextAppearance.AppCompat.Large"
                   android:text="@string/day"
                   android:fontFamily="@font/pacifico"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="50dp"
                   android:layout_marginLeft="50dp" />
               <ImageView
                   android:layout_width="20dp"
                   android:src="@drawable/tick"
                   android:layout_marginTop="15dp"
                   android:layout_toRightOf="@+id/dialog_day"
                   android:layout_height="20dp"
                   android:contentDescription="@string/todo"
                   android:layout_toEndOf="@+id/dialog_day" />
               <TextView
                   android:id="@+id/dialog_next"
                   android:layout_below="@+id/dialog_day"
                   android:textAppearance="@style/TextAppearance.AppCompat.Large"
                   android:text="@string/day"
                   android:layout_marginLeft="50dp"
                   android:fontFamily="@font/pacifico"
                   android:layout_gravity="center_horizontal|center_vertical"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="50dp" />
               <Button
                   android:id="@+id/dialog_button"
                   android:layout_below="@id/dialog_next"
                   android:fontFamily="@font/pacifico"
                   android:background="#5cb85c"
                   android:textAppearance="@style/TextAppearance.AppCompat.Large"
                   android:text="@string/ok"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
           </RelativeLayout>


   </androidx.cardview.widget.CardView>
</LinearLayout>