<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".HomeActivity">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    app:cardMaxElevation="10dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="#5cb85c"
    app:contentPadding="5dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp"
    android:layout_height="wrap_content">
   <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TextView
           android:layout_width="match_parent"
           android:background="#fff"
           android:layout_height="wrap_content"
           android:text="@string/choose_your_mode"
           android:textAppearance="@style/TextAppearance.AppCompat.Large"
           android:fontFamily="@font/pacifico"
           android:gravity="center_horizontal|center_vertical"
           />
   </LinearLayout>
</androidx.cardview.widget.CardView>
<androidx.cardview.widget.CardView
    android:layout_marginTop="100dp"
    app:cardMaxElevation="10dp"
    app:cardUseCompatPadding="true"
    android:padding="7dp"
    app:cardBackgroundColor="#5cb85c"
    app:contentPadding="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:layout_width="match_parent"
    android:layout_height="200dp">
    <LinearLayout
        android:background="#fff"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
      <Button
          android:id="@+id/random"
          android:textSize="40sp"
          android:textAppearance="@style/TextAppearance.AppCompat.Large"
          android:text="@string/showallworkouts"
          android:fontFamily="@font/pacifico"
          android:background="@drawable/ninth"
          android:layout_width="match_parent"
          android:layout_height="match_parent"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        app:cardMaxElevation="10dp"
        app:cardUseCompatPadding="true"
        android:padding="7dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#5cb85c"
        app:contentPadding="5dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <LinearLayout
            android:background="#fff"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/daywisemode"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/Day_wise_mode"
                android:textSize="40sp"
                android:fontFamily="@font/pacifico"
                android:background="@drawable/seventh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>